--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "https-proxy-agent": "^7.0.4",
+    "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "puppeteer": "^22.3.0",
     "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
+    "@types/uuid": "^9.0.8",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
